// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default state 1`] = `
<span>
  <div
    class="pane"
  >
    <h1
      class="heading"
    >
      Bienvenue !
    </h1>
     
    <div
      class="container"
    >
       
       
      <details
        open=""
      >
        <summary
          class="hidden"
          title="password-toggle"
        >
          <span
            class="material-icons"
          >
            arrow_back
          </span>
          Autres options
        </summary>
         
        <form
          method="POST"
        >
          <div
            class="row"
          >
            <fieldset>
              <legend>
                Identifiant
              </legend>
               
              <input
                name="id"
              />
            </fieldset>
          </div>
           
          <div
            class="row"
          >
            <fieldset>
              <legend>
                Mot de passe
              </legend>
               
              <input
                data-testid="password"
                name="password"
                type="password"
              />
            </fieldset>
          </div>
           
          <div
            class="actions"
          >
            <button
              disabled=""
              type="submit"
            >
              <span
                class="material-icons"
              >
                emoji_people
              </span>
              
              <span
                class="text"
              >
                Entrer
              </span>
              
              
            </button>
          </div>
           
          <input
            name="redirect"
            type="hidden"
            value=""
          />
        </form>
      </details>
    </div>
  </div>
</span>
`;

exports[`With Github provider 1`] = `
<span>
  <div
    class="pane"
  >
    <h1
      class="heading"
    >
      Bienvenue !
    </h1>
     
    <div
      class="container"
    >
      <button>
        <span
          class="icon"
        >
          <svg
            height="20"
            slot="icon"
            viewBox="0 0 14 14"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 .175c-3.872 0-7 3.128-7 7 0 3.084 2.013 5.71 4.79 6.65.35.066.482-.153.482-.328v-1.181c-1.947.415-2.363-.941-2.363-.941-.328-.81-.787-1.028-.787-1.028-.634-.438.044-.416.044-.416.7.044 1.071.722 1.071.722.635 1.072 1.641.766 2.035.59.066-.459.24-.765.437-.94-1.553-.175-3.193-.787-3.193-3.456 0-.766.262-1.378.721-1.881-.065-.175-.306-.897.066-1.86 0 0 .59-.197 1.925.722a6.754 6.754 0 0 1 1.75-.24c.59 0 1.203.087 1.75.24 1.335-.897 1.925-.722 1.925-.722.372.963.131 1.685.066 1.86.46.48.722 1.115.722 1.88 0 2.691-1.641 3.282-3.194 3.457.24.219.481.634.481 1.29v1.926c0 .197.131.415.481.328C11.988 12.884 14 10.259 14 7.175c0-3.872-3.128-7-7-7z"
              fill="currentColor"
            />
          </svg>
        </span>
        
        <span
          class="text"
        >
          Continuer avec Github
        </span>
        
        
      </button>
       
       
      <details>
        <summary
          title="password-toggle"
        >
          <span
            class="material-icons"
          >
            arrow_forward
          </span>
          Continuer avec un mot de passe
        </summary>
         
        <form
          method="POST"
        >
          <div
            class="row"
          >
            <fieldset>
              <legend>
                Identifiant
              </legend>
               
              <input
                name="id"
              />
            </fieldset>
          </div>
           
          <div
            class="row"
          >
            <fieldset>
              <legend>
                Mot de passe
              </legend>
               
              <input
                data-testid="password"
                name="password"
                type="password"
              />
            </fieldset>
          </div>
           
          <div
            class="actions"
          >
            <button
              disabled=""
              type="submit"
            >
              <span
                class="material-icons"
              >
                emoji_people
              </span>
              
              <span
                class="text"
              >
                Entrer
              </span>
              
              
            </button>
          </div>
           
          <input
            name="redirect"
            type="hidden"
            value=""
          />
        </form>
      </details>
    </div>
  </div>
</span>
`;

exports[`With Google provider 1`] = `
<span>
  <div
    class="pane"
  >
    <h1
      class="heading"
    >
      Bienvenue !
    </h1>
     
    <div
      class="container"
    >
       
      <button>
        <span
          class="icon"
        >
          <svg
            height="18"
            slot="icon"
            width="17.64"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.991 10.71V7.362h8.424c.126.567.225 1.098.225 1.845C17.64 14.346 14.193 18 9 18c-4.968 0-9-4.032-9-9s4.032-9 9-9c2.43 0 4.464.891 6.021 2.349l-2.556 2.484C11.817 4.221 10.683 3.501 9 3.501c-2.979 0-5.409 2.475-5.409 5.508S6.021 14.517 9 14.517c3.447 0 4.716-2.385 4.95-3.798H8.991Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        
        <span
          class="text"
        >
          Continuer avec Google
        </span>
        
        
      </button>
       
      <details>
        <summary
          title="password-toggle"
        >
          <span
            class="material-icons"
          >
            arrow_forward
          </span>
          Continuer avec un mot de passe
        </summary>
         
        <form
          method="POST"
        >
          <div
            class="row"
          >
            <fieldset>
              <legend>
                Identifiant
              </legend>
               
              <input
                name="id"
              />
            </fieldset>
          </div>
           
          <div
            class="row"
          >
            <fieldset>
              <legend>
                Mot de passe
              </legend>
               
              <input
                data-testid="password"
                name="password"
                type="password"
              />
            </fieldset>
          </div>
           
          <div
            class="actions"
          >
            <button
              disabled=""
              type="submit"
            >
              <span
                class="material-icons"
              >
                emoji_people
              </span>
              
              <span
                class="text"
              >
                Entrer
              </span>
              
              
            </button>
          </div>
           
          <input
            name="redirect"
            type="hidden"
            value=""
          />
        </form>
      </details>
    </div>
  </div>
</span>
`;

exports[`With all providers 1`] = `
<span>
  <div
    class="pane"
  >
    <h1
      class="heading"
    >
      Bienvenue !
    </h1>
     
    <div
      class="container"
    >
      <button>
        <span
          class="icon"
        >
          <svg
            height="20"
            slot="icon"
            viewBox="0 0 14 14"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 .175c-3.872 0-7 3.128-7 7 0 3.084 2.013 5.71 4.79 6.65.35.066.482-.153.482-.328v-1.181c-1.947.415-2.363-.941-2.363-.941-.328-.81-.787-1.028-.787-1.028-.634-.438.044-.416.044-.416.7.044 1.071.722 1.071.722.635 1.072 1.641.766 2.035.59.066-.459.24-.765.437-.94-1.553-.175-3.193-.787-3.193-3.456 0-.766.262-1.378.721-1.881-.065-.175-.306-.897.066-1.86 0 0 .59-.197 1.925.722a6.754 6.754 0 0 1 1.75-.24c.59 0 1.203.087 1.75.24 1.335-.897 1.925-.722 1.925-.722.372.963.131 1.685.066 1.86.46.48.722 1.115.722 1.88 0 2.691-1.641 3.282-3.194 3.457.24.219.481.634.481 1.29v1.926c0 .197.131.415.481.328C11.988 12.884 14 10.259 14 7.175c0-3.872-3.128-7-7-7z"
              fill="currentColor"
            />
          </svg>
        </span>
        
        <span
          class="text"
        >
          Continuer avec Github
        </span>
        
        
      </button>
       
      <button>
        <span
          class="icon"
        >
          <svg
            height="18"
            slot="icon"
            width="17.64"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.991 10.71V7.362h8.424c.126.567.225 1.098.225 1.845C17.64 14.346 14.193 18 9 18c-4.968 0-9-4.032-9-9s4.032-9 9-9c2.43 0 4.464.891 6.021 2.349l-2.556 2.484C11.817 4.221 10.683 3.501 9 3.501c-2.979 0-5.409 2.475-5.409 5.508S6.021 14.517 9 14.517c3.447 0 4.716-2.385 4.95-3.798H8.991Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        
        <span
          class="text"
        >
          Continuer avec Google
        </span>
        
        
      </button>
       
      <details>
        <summary
          title="password-toggle"
        >
          <span
            class="material-icons"
          >
            arrow_forward
          </span>
          Continuer avec un mot de passe
        </summary>
         
        <form
          method="POST"
        >
          <div
            class="row"
          >
            <fieldset>
              <legend>
                Identifiant
              </legend>
               
              <input
                name="id"
              />
            </fieldset>
          </div>
           
          <div
            class="row"
          >
            <fieldset>
              <legend>
                Mot de passe
              </legend>
               
              <input
                data-testid="password"
                name="password"
                type="password"
              />
            </fieldset>
          </div>
           
          <div
            class="actions"
          >
            <button
              disabled=""
              type="submit"
            >
              <span
                class="material-icons"
              >
                emoji_people
              </span>
              
              <span
                class="text"
              >
                Entrer
              </span>
              
              
            </button>
          </div>
           
          <input
            name="redirect"
            type="hidden"
            value=""
          />
        </form>
      </details>
    </div>
  </div>
</span>
`;

exports[`With password error 1`] = `
<span>
  <div
    class="pane"
  >
    <h1
      class="heading"
    >
      Bienvenue !
    </h1>
     
    <div
      class="container"
    >
       
       
      <details
        open=""
      >
        <summary
          title="password-toggle"
        >
          <span
            class="material-icons"
          >
            arrow_back
          </span>
          Autres options
        </summary>
         
        <form
          method="POST"
        >
          <div
            class="row"
          >
            <fieldset>
              <legend
                class="has-value"
              >
                Identifiant
              </legend>
               
              <input
                name="id"
              />
            </fieldset>
          </div>
           
          <div
            class="row"
          >
            <fieldset>
              <legend
                class="has-value"
              >
                Mot de passe
              </legend>
               
              <input
                data-testid="password"
                name="password"
                type="password"
              />
            </fieldset>
          </div>
           
          <div
            class="error"
          >
            Authentication failed!
          </div>
           
          <input
            name="redirect"
            type="hidden"
            value=""
          />
        </form>
      </details>
    </div>
  </div>
</span>
`;

exports[`with password values 1`] = `
<span>
  <div
    class="pane"
  >
    <h1
      class="heading"
    >
      Bienvenue !
    </h1>
     
    <div
      class="container"
    >
       
       
      <details
        open=""
      >
        <summary
          class="hidden"
          title="password-toggle"
        >
          <span
            class="material-icons"
          >
            arrow_back
          </span>
          Autres options
        </summary>
         
        <form
          method="POST"
        >
          <div
            class="row"
          >
            <fieldset>
              <legend
                class="has-value"
              >
                Identifiant
              </legend>
               
              <input
                name="id"
              />
            </fieldset>
          </div>
           
          <div
            class="row"
          >
            <fieldset>
              <legend
                class="has-value"
              >
                Mot de passe
              </legend>
               
              <input
                data-testid="password"
                name="password"
                type="password"
              />
            </fieldset>
          </div>
           
          <div
            class="actions"
          >
            <button
              type="submit"
            >
              <span
                class="material-icons"
              >
                emoji_people
              </span>
              
              <span
                class="text"
              >
                Entrer
              </span>
              
              
            </button>
          </div>
           
          <input
            name="redirect"
            type="hidden"
            value=""
          />
        </form>
      </details>
    </div>
  </div>
</span>
`;
